# OpenGL-Abstraction

./: .gitignore  CMakeLists.txt
include/: IndexBuffer.h  Logger.h  RenderState.h  RenderTarget.h  Session.h  Shader.h  Square.h  TargetRenderer.h  Texture.h  Transformable.h  Vertex.h  VertexBuffer.h  VertexBufferArray.h  Window.h
source/: IndexBuffer.cpp  Logger.cpp  RenderState.cpp  RenderTarget.cpp  Session.cpp  Shader.cpp  Square.cpp  TargetRenderer.cpp  Texture.cpp  Transformable.cpp  Vertex.cpp  VertexBuffer.cpp  VertexBufferArray.cpp  Window.cpp
test/: SessionTest.hpp
